More desperate attempts to include the db-user everywhere, plus aligning blog comments correctly

--- a/www/wp-content/themes/pistruiatul/style.css
+++ b/www/wp-content/themes/pistruiatul/style.css
@@ -494,6 +494,9 @@ select {
 	    clear: both;
 	    visibility: hidden;
 	}
+#respond {
+  text-align: left;
+}
 #commentform #submit {
 	margin: 0 0 5px auto;
 	float: right;
